Fix layout overflow

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -10,6 +10,7 @@ body {
 
 body {
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 h5, h6 {
